2014-03-05  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: enhancements: trailing zero bytes will be removed from
        AVC/h.264 NALUs. Implements #997.

2014-03-04  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: fixed timestamp assignment for AVC/h.264
        videos in which recovery point SEIs occur in front of the second
        field of two interlaced fields.

2014-03-02  Moritz Bunkus  <moritz@bunkus.org>

        * Released v6.8.0.

2014-02-28  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge, mkvextract: new feature: added support for h.265/HEVC
        by merging the patches from DivX/Rovi Corp. So far HEVC is only
        supported as elementary streams and read from other Matroska
        files.

2014-02-22  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: enhancement: The deprecated ISO 639-1 code "iw" is now
        recognized for Hebrew.

2014-02-15  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: The AC3 packetizer will re-derive the
        sampling frequency and the number of channels from the
        bitstream. This way obviously invalid information from the source
        container like a sampling frequency of 0 Hz will be fixed.

2014-02-05  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: enhancements: AVI reader: audio chunks with obvious
        wrong size information (bigger than 10 MB) will be skipped.

2014-02-03  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: When reading M2TS files belonging to an MPLS
        playlist mkvmerge will now only copy packets whose timestamps lie
        between the »in time« and »out time« restrictions from the
        playlist's entry corresponding to that M2TS file. Fixes #985.

2014-01-22  Moritz Bunkus  <moritz@bunkus.org>

        * all: Windows 64bit: fixed return value checks for opening
        files. Fixes #972.

2014-01-21  Moritz Bunkus  <moritz@bunkus.org>
