@@ -242,7 +242,7 @@ T_393aac_audiospecificconfig_0channels:0bf60d7f32b9a05462ca9585bebf8b86:passed:2
 T_394flv_negative_cts_offset:3509ad61f8f886de8f27e420139cc89c:passed:20130414-115331:0.123013461
 T_395remove_bitstream_ar_info:ea1df2cd599c8311730bce76c78d21d9-cc48db1bfac51a06a9b8ffd684481a92-66852921e2a157b3b62800368d133c4d-a1d5882c43fd871622ddbb755f14252c:passed:20130427-171243:0.334408574
 T_396X_pcm_mono_16bit:49b80add61d8a11514d747c9616f7e80:passed:20130624-200214:0.055106028
-T_397mpeg_ts_broken_pes_track_detection:e002775d9f85ad5dbc03d050da9bb373:passed:20130624-220549:1.12831027
+T_397mpeg_ts_broken_pes_track_detection:2666da444bef9f02389b3c49846d33d3:passed:20130624-220549:1.12831027
 T_398flv1_no_pixel_dimensions:44cdf14a8ffdfe91e5a0a7639b1b5834:passed:20130624-225648:0.103188723
 T_399h264_append_and_default_duration:54f0d87ba4189fcd53b951e963c5b5b5:passed:20130627-195946:5.558958754
 T_400opus_experimental:46a9a8e73f0d7423f0143597885688c2:passed:20130703-213929:0.055921025
@@ -270,3 +270,4 @@ T_421svq3_from_mov:4947c2a51a12097cf2b3d002eff2e9df:passed:20140112-124559:0.195
 T_422ac3_rederive_track_parameters_from_bitstream:7cf40379f451c604c8b6fce1f66b52b3:passed:20140215-162358:0.231506136
 T_423deprecated_iso639_codes:9e7d8ab790007cf4f26ea31bb5de148f-good-6dd4fb24b0c76fb411a108102145eb71-good-2f580ffb94651b8782075a35b69258f3-good-4425838d0144c380ddbf59815cf83455-good:passed:20140222-185414:0.243526271
 T_424avc_recover_point_sei_before_second_field:b66042e704ced1b55a5283d4b09876de:passed:20140304-190254:1.581374408
+T_425mpeg_ts_timestamp_outlier:d9c6a4a1c7e815fed80a038128899586:passed:20140305-203603:2.509694471
