@@ -1,5 +1,9 @@
 2014-03-05  Moritz Bunkus  <moritz@bunkus.org>
 
+        * mkvmerge: bug fix: MPEG TS: timestamp outliers are ignored if
+        they differ at least five minutes from the last valid
+        timestamp. Fixes #998.
+
         * mkvmerge: enhancements: trailing zero bytes will be removed from
         AVC/h.264 NALUs. Implements #997.
 
